Adjust importing data

--- a/Match notebook.ipynb
+++ b/Match notebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -53,19 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 172,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Loading data first\n",
-    "data = pd.read_csv(\"football dataset.csv\")"
+    "data = pd.read_csv(r\"data\\football dataset.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "[8 rows x 74 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "Length: 80, dtype: int64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "(25979, 80)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "Length: 25979, dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 182,
    "metadata": {
     "collapsed": true
    },
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 185,
    "metadata": {
     "collapsed": true
    },
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "Name: total_goals, dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
